--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage":"/GamesDatabase",
+
   "scripts": {
     "dev": "vite",
     "predeploy": "npm run build",
